--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-Package    Version
----------- -------
-asgiref    3.4.1
-Django     3.2.7
-pip        21.3
-pytz       2021.3
-setuptools 49.2.1
-sqlparse   0.4.2
+asgiref==3.4.1
+Django==3.2.7
+pytz==2021.3
+sqlparse==0.4.2
